tests/snapshots/compute_rules__compute_rules@stable_rust-BindingMode.snap
---
source: tests/compute_rules.rs
info:
  bundle_name: stable_rust
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: ResetBindingMode
    inherited_ref_on_ref: EatBoth
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: false
    eat_inherited_ref_alone: false
    downgrade_shared_inside_shared: false
    rules_display_style: BindingMode
---
p0 @ q.0: T0, p1 @ q.1: T1
-------------------------- "Constructor"
[p0, p1] @ q: [T0, T1]

p0 @ &(*q).0: &T0, p1 @ &(*q).1: &T1
------------------------------------ "ConstructorRef"
[p0, p1] @ q: &[T0, T1]

p0 @ &mut (*q).0: &mut T0, p1 @ &mut (*q).1: &mut T1
---------------------------------------------------- "ConstructorRef"
[p0, p1] @ q: &mut [T0, T1]

[p0, p1] @ *q: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ q: &&T

[p0, p1] @ &**q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &&mut T

[p0, p1] @ *q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &T

[p0, p1] @ &mut **q: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &mut T

p @ *q: T
---------------------------------- "Deref(EatOuter)"
&p @ q: &T, binding_mode(q) = move

p @ *q: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ q: &mut T, binding_mode(q) = move

p @ **q: T
---------------------------------- "Deref(EatBoth)"
&p @ q: &&T, binding_mode(q) = ref

p @ **q: T
------------------------------------------ "Deref(EatBoth)"
&p @ q: &mut &T, binding_mode(q) = ref mut

p @ **q: T
------------------------------------------ "Deref(EatBoth)"
&mut p @ q: &&mut T, binding_mode(q) = ref

p @ **q: T
-------------------------------------------------- "Deref(EatBoth)"
&mut p @ q: &mut &mut T, binding_mode(q) = ref mut

x @ q: &T
------------------------------------ "BindingOverrideBorrow"
ref x @ q: &T, binding_mode(q) = ref

x @ &*q: &T
-------------------------------------------- "BindingOverrideBorrow"
ref x @ q: &mut T, binding_mode(q) = ref mut

x @ &mut *q: &mut T
---------------------------------------- "BindingOverrideBorrow"
ref mut x @ q: &T, binding_mode(q) = ref

x @ q: &mut T
------------------------------------------------ "BindingOverrideBorrow"
ref mut x @ q: &mut T, binding_mode(q) = ref mut

mut x @ *q: T
------------------------------------ "BindingResetBindingMode"
mut x @ q: &T, binding_mode(q) = ref

mut x @ *q: T
-------------------------------------------- "BindingResetBindingMode"
mut x @ q: &mut T, binding_mode(q) = ref mut

x @ &q: &T
------------------------------------ "BindingBorrow"
ref x @ q: T, binding_mode(q) = move

x @ &mut q: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ q: T, binding_mode(q) = move

let x: T = q
------------ "Binding"
x @ q: T

let mut x: T = q
------------------------------------ "Binding"
mut x @ q: T, binding_mode(q) = move
